fixed max-width layout bug

--- a/main.css
+++ b/main.css
@@ -337,6 +337,10 @@ h3{
 
 @media all and (min-width: 500px){
 
+    .svg-wrapper{
+        max-width: 460px;
+    }
+
     .rachel-subtitle{
         margin-top: calc(2* var(--spacer-tiny));
     }
@@ -349,7 +353,6 @@ h3{
         padding: 0;
     }
     
-
     .title-icon-wrapper{
         flex-direction: row;
         align-items: center;
@@ -381,8 +384,8 @@ h3{
         font-size: 14px;
     }
 
-    .svg-wrapper svg{
-        max-width: 450px;
+    .svg-wrapper{
+        max-width: 600px;
     }
 
     .about-flex-wrapper{
